# HostCTF

./: .gitignore  Cargo.toml  README.md
backend-fast/: Cargo.toml  challenges.json
backend-fast/src/: main.rs
frontend-plain/: Cargo.toml
frontend-plain/src/: main.rs
frontend-plain/templates/: base.html  challenges.html  index.html  login.html  profile.html  register.html  scoreboard.html  script.js
frontend-sveltekit/: README.md  package.json
frontend-sveltekit/src/: app.html  config.ts
frontend-sveltekit/src/components/: infobox.svelte  navbar.svelte
frontend-sveltekit/src/lib/: index.ts
frontend-sveltekit/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend-sveltekit/src/routes/challenges/: +page.svelte
frontend-sveltekit/src/routes/login/: +page.svelte
frontend-sveltekit/src/routes/logout/: +page.svelte
frontend-sveltekit/src/routes/profile/: +page.svelte
frontend-sveltekit/src/routes/register/: +page.svelte
frontend-sveltekit/src/routes/scoreboard/: +page.svelte
single-binary-host/src/: main.rs
single-binary-host/templates/: challenges.html  login.html  profile.html  scoreboard.html
single_binary_host/templates/: navbar-logged.html
src/: main.rs
templates/: base.html  index.html  info-box.html  navbar.html  register.html
