[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true

[dependencies]
serde = { version = "1.0.178", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.104", default-features = false }
axum = { version = "0.6.19", default-features = false, features = ["http1", "json", "tokio", "form"] }
tower = { version = "0.4.13", default-features = false }
blake3 = { version = "1.4.1", default-features = false } # FIXME: switch to rust-argon2
tower-http = { version = "0.4.3", default-features = false, features = ["fs", "cors"] }
tokio = { version = "1.29.1", default-features = false, features = ["macros", "rt-multi-thread"] }
