[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true

[dependencies]
axum = { version = "0.6.19", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1.29.1", default-features = false, features = ["macros", "rt-multi-thread"] }
minijinja = { version = "1.0.6", default-features = false }
